Fix overlapping between social media and sticky navbar

--- a/app/styles/components/_nav.scss
+++ b/app/styles/components/_nav.scss
@@ -1,5 +1,6 @@
 nav {
   position: fixed;
+  z-index: 1;
   overflow: hidden;
   top: 0;
   width: 100%;
